# python-project-49

./: Makefile  README.md  brain-even.cast  brain-gcd.cast  brain-progression.castrecord  pyproject.toml
brain_games/asciinema/: brain-games.cast  brain-progression.cast
brain_games/brain_games/: cli.py
brain_games/games/: calc.py  engine.py  gcd.py  prime.py  services.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  main.py  services.py
brain_games/services/: services.py
