[project]
name = "hexlet-code"
version = "0.1.0"
description = "It is my first project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts] 
brain-games = "brain_games.scripts.brain_games:main"
